wedding/templates/wedding-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-ingress-service
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - johannaogpeter.wedding
    secretName: johannaogpeter-cert
  rules:
  - host: johannaogpeter.wedding
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: wedding-service
            port:
              number: 3000
